# genestorian_data_refinement

./: .dockerignore  .gitignore  Dockerfile  api.py  biological_concepts.md  docker_start.sh  dummy.md  dummy.py  example.py  install_local_depency.sh  interface.html  license.txt  patterns.md  pyproject.toml  readme.md  test_cases.md
.github/workflows/: ci.yaml
Lab_strains/: format_all.sh  run_all.sh
Lab_strains/Chen_lab/: analyse.ipynb  analyse.py  format.py  summary_pattern.py
Lab_strains/dey_lab/: alleles_test.json  analyse.ipynb  analyse.py  first_version_pipeline.py  format.py  fourth_version.py  generalised_function.py  generic_func.py  occurances.py  occurences.py  occurrence.py  second_version_pipeline.py  strains_test.tsv  test_occurance.json  test_second_version.py  test_third_version.py  unidentified_allele_features.py  use_later.py
Lab_strains/lilin_lab/: analyse.ipynb  analyse.py  (+2 more)
allele_components/: markers.toml  other.toml  promoters.toml  separators.txt  sequence_features.toml  tags.toml  tags_fpbase.toml
data/: alleles.toml  alleles_pombemine.tsv  gene_IDs.toml  gene_IDs_names.tsv  strains.tsv
genestorian_data_refinement/: __init__.py  matched_pattern.py  notebook.ipynb  notebook.py  pattern_identify.py
genestorian_module/: setup.py
gestorian_data_refinement/: __init__.py  converge.py  pattern_identify.py
get_data/: concatenate_strains.sh  convert_alleles2toml.py  convert_gene2toml.py  convert_tags2toml.py  get_fpbase_data.py  get_strain_table.js  pombemine_query.py  pombemine_query.xml  tag_fpbase.json
grammar/: pseudo_grammar.json
notebooks/: first_notebook.ipynb  second_notebook.ipynb  test_nltk.py
toml_example/: dummy.toml  entities.toml  example.py
(+58 files in other folders)
