[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "a python application to interpret genotypes from strain lists"
name = "genestorian_data_refinement"
version = "0.1.0"

[tool.poetry.dependencies]
genestorian_module = {path = "genestorian_module", develop = true}
openpyxl = "^3.0.10"
pandas = "^1.4.2"
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
